--- a/users/templates/users/user_notebook.html
+++ b/users/templates/users/user_notebook.html
@@ -37,7 +37,7 @@
             resize: horizontal;
             position: relative;
             z-index: 2;
-            width: 100px;
+            {#width: 100px;#}
         }
 
         .hide-mobile {
