not-complete-local

--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -142,12 +142,12 @@ i.fa.fa-chevron-down{
 <div class="page-content bg-white" style="padding-bottom: 0em;">
     <!-- Slider Banner -->
 
-    <div class="dlab-bnr-inr" style="background: black;">
-        <video id="myVideo" autoplay muted loop style="margin-top: -1.5em;padding: 3em;">
-          <source src="{% static 'video/dark.mp4' %}" type="video/mp4">
-          <source src="{% static 'video/dark.mp4' %}" type="video/ogg">
-        </video>
-    </div>
+<!--    <div class="dlab-bnr-inr" style="background: black;height: 50%;">-->
+<!--        <video id="myVideo" autoplay muted loop style="margin-top: -1.5em;padding: 3em;height: 50%;">-->
+<!--          <source src="{% static 'video/dark.mp4' %}" type="video/mp4">-->
+<!--          <source src="{% static 'video/dark.mp4' %}" type="video/ogg">-->
+<!--        </video>-->
+<!--    </div>-->
 
 
     <!-- <div class="dlab-bnr-inr" style="background-image:url('{% static 'images/background/bg1.jpg' %}'); background-size: cover; background-position: top center; background-repeat: no-repeat;">
@@ -219,8 +219,16 @@ i.fa.fa-chevron-down{
                             <span class="sub-title text-primary">Collaborative coding solutions<img
                                     src="{% static 'images/background/bg6.png' %}" alt="" /></span>
                             <h2 class="title">AI CODE ROOMS</h2>
-                            <p>An environment which helps to connect people that are looking for AI/Coding solutions, people with no previous communication can connect through a Stellar AI Id which leads to a code room which includes important features like chats, voice calls and video calls.</p>
-                            <p>AI/Coding personal tutors, E-learning Institutions , Companies, students can use such affordable AI Code rooms for personal growth.</p>
+<!--                            <p>An environment which helps to connect people that are looking for AI/Coding solutions, people with no previous communication can connect through a Stellar AI Id which leads to a code room which includes important features like chats, voice calls and video calls.</p>-->
+<!--                            <p>AI/Coding personal tutors, E-learning Institutions , Companies, students can use such affordable AI Code rooms for personal growth.</p>-->
+                               <p>1)	Live Audio for users inside the AI code-room / meeting.<br>
+2)	Live Video for users inside the AI code-room / meeting.<br>
+3)	Live Coding Interface where live coding can happen where one user can see another user coding live , all the different Machine Learning / Deep Learning / Artificial Intelligence Libraries are provided in the Coding Interface.
+4)	Python coders/students/developers/employees/companies anyone can come and use this unique code-room for growth.<br>
+5)	Live Chatting for users inside the code-room/meeting.<br>
+6)	Every Code-room has a host/admin who can add ‘n’ number of people in the group according to the plan he buys.<br>
+7)	Every Code-room has a host/admin who has the power to add/remove any user he/she wants.<br>
+8)	In the absence of the host/admin still all the code-room members can code and run algorithms on the coding interface.</p>
                         </div>
                     </div>
                 </div>
@@ -296,32 +304,32 @@ i.fa.fa-chevron-down{
 <div class="section-full bg-white content-inner-1">
 
 
-        <div class="section-full bg-white content-inner-1">
+<!--        <div class="section-full bg-white content-inner-1">-->
 
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-12">
-                        <div class="overview-box style1">
-                            <div class="overview-media wow fadeInLeft img-move2" data-wow-delay="0.3s">
-                                <img src="{% static 'images/illustrator/skeleton.svg' %}" alt="">
-                            </div>
-                            <div class="overview-info wow fadeInRight" data-wow-delay="0.6s">
-<!--                                <span class="sub-title text-primary">Rich coding templates</span>-->
-                                <h2 class="title"><a href="#">Line of business</a>
-                                </h2>
-                                <p>A community based model where Artificial Intelligence/Coding/Machine-Learning enthusiasts can meet and connect with each other through different <br> Stellar AI features like -</p>
-                                <p>
-                                    1) AI Forums where users can post their doubts/questions/discussions and expect instant replies/answers from other users.<br>
-2) AI Code-rooms where users can add friends from the Stellar AI community and can connect live on code-room feature on the website , where they get live , chatting, video calling and a Common Coding Interface which is specially for AI/ML/DL purposes. This is paid but very affordable.<br>
-3) AI Skeleton Codes where there are ready made codes of different Artificial Intelligence Algorithms which the users can download and select as per the selected filters.<br>
-4) AI Competitions where AI/ML/DL Competitons from different sources will be posted and the  users can learn more and improve themselves by solving such datasets alone or in a team and grow together.<br>
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+<!--            <div class="container">-->
+<!--                <div class="row">-->
+<!--                    <div class="col-lg-12">-->
+<!--                        <div class="overview-box style1">-->
+<!--                            <div class="overview-media wow fadeInLeft img-move2" data-wow-delay="0.3s">-->
+<!--                                <img src="{% static 'images/illustrator/skeleton.svg' %}" alt="">-->
+<!--                            </div>-->
+<!--                            <div class="overview-info wow fadeInRight" data-wow-delay="0.6s">-->
+<!--&lt;!&ndash;                                <span class="sub-title text-primary">Rich coding templates</span>&ndash;&gt;-->
+<!--                                <h2 class="title"><a href="#">Line of business</a>-->
+<!--                                </h2>-->
+<!--                                <p>A community based model where Artificial Intelligence/Coding/Machine-Learning enthusiasts can meet and connect with each other through different <br> Stellar AI features like -</p>-->
+<!--                                <p>-->
+<!--                                    1) AI Forums where users can post their doubts/questions/discussions and expect instant replies/answers from other users.<br>-->
+<!--2) AI Code-rooms where users can add friends from the Stellar AI community and can connect live on code-room feature on the website , where they get live , chatting, video calling and a Common Coding Interface which is specially for AI/ML/DL purposes. This is paid but very affordable.<br>-->
+<!--3) AI Skeleton Codes where there are ready made codes of different Artificial Intelligence Algorithms which the users can download and select as per the selected filters.<br>-->
+<!--4) AI Competitions where AI/ML/DL Competitons from different sources will be posted and the  users can learn more and improve themselves by solving such datasets alone or in a team and grow together.<br>-->
+<!--                                </p>-->
+<!--                            </div>-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </div>-->
 
         <div class="section-full bg-white content-inner-1 my-5 py-5">
             <div class="container">
@@ -524,7 +532,7 @@ i.fa.fa-chevron-down{
 
             <div class="col-12">
                 <div class="question-block radius-md m-2">
-                    <label class="mb-1 font-weight-normal">5. Does any ML/DL/AI courses or studied Artificial Intelligence in college yet?</label>
+                    <label class="mb-1 font-weight-normal">5. Have done any ML/DL/AI courses or studied Artificial Intelligence in college yet?</label>
                     <div class="d-block mt-2">
                         {% for val, itm in form.does_ml_dl_ai.field.choices %}
                         <div class="form-check form-check-inline">
