--- a/home/templates/home/base.html
+++ b/home/templates/home/base.html
@@ -91,8 +91,8 @@
                 <div class="main-bar clearfix ">
                     <div class="container clearfix">
                         <!-- website logo -->
-                        <div class="logo-header pt-2 pb-0 mostion">
-                            <a href="{% url 'home:home' %}" class="dez-page p-0"><img src="{% static 'images/logo/color-logo.png' %}" style="width: 70px;" class="p-0"></a>
+                        <div class="logo-header pt-2 pb-0 mostion" style="width: 150px">
+                            <a href="{% url 'home:home' %}" class="dez-page p-0"><img src="{% static 'images/logo/home-logo.png' %}" style="" class="p-0"></a>
 <!--                            <p>Stellar AI</p>-->
                         </div>
                         <!-- nav toggle button -->
