--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -142,12 +142,12 @@ i.fa.fa-chevron-down{
 <div class="page-content bg-white" style="padding-bottom: 0em;">
     <!-- Slider Banner -->
 
-<!--    <div class="dlab-bnr-inr" style="background: black;height: 50%;">-->
-<!--        <video id="myVideo" autoplay muted loop style="margin-top: -1.5em;padding: 3em;height: 50%;">-->
-<!--          <source src="{% static 'video/dark.mp4' %}" type="video/mp4">-->
-<!--          <source src="{% static 'video/dark.mp4' %}" type="video/ogg">-->
-<!--        </video>-->
-<!--    </div>-->
+    <div class="" style="background: black;height: 500px;">
+        <center><video id="myVideo" autoplay muted loop style="height: 500px;width: auto;">
+          <source src="{% static 'video/dark.mp4' %}" type="video/mp4">
+          <source src="{% static 'video/dark.mp4' %}" type="video/ogg">
+        </video></center>
+    </div>
 
 
     <!-- <div class="dlab-bnr-inr" style="background-image:url('{% static 'images/background/bg1.jpg' %}'); background-size: cover; background-position: top center; background-repeat: no-repeat;">
