--- a/home/templates/home/base.html
+++ b/home/templates/home/base.html
@@ -292,10 +292,10 @@
                             </div>
                             <div class="footer-social">
                                 <ul>
-                                    <li><a href="javascript:void(0);"><i class="fa fa-facebook"></i></a></li>
-                                    <li><a href="javascript:void(0);"><i class="fa fa-linkedin"></i></a></li>
-                                    <li><a href="javascript:void(0);"><i class="fa fa-dribbble"></i></a></li>
-                                    <li><a href="javascript:void(0);"><i class="fa fa-twitter"></i></a></li>
+<!--                                    <li><a href="javascript:void(0);"><i class="fa fa-facebook"></i></a></li>-->
+                                    <li><a target="_blank" href="https://www.linkedin.com/posts/stellarai_machinelearning-artificialintelligence-planning-activity-6897175150362443777-YGYL"><i class="fa fa-linkedin"></i></a></li>
+<!--                                    <li><a href="javascript:void(0);"><i class="fa fa-dribbble"></i></a></li>-->
+                                    <li><a href="https://twitter.com/StellarAI_" target="_blank"><i class="fa fa-twitter"></i></a></li>
                                 </ul>
                             </div>
                         </div>
