--- a/static/assets/css/notebook.css
+++ b/static/assets/css/notebook.css
@@ -1,1 +1,97 @@
-*,::after,::before{margin:0;padding:0}input,textarea{font:inherit}html{font-size:62.5%;font-family:Roboto;scroll-behavior:smooth}body{box-sizing:border-box;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale}.custom-container{width:100vw;height:100vh;display:flex;align-items:center;justify-content:center}.wrapper{height:100%;width:100%}.video-section{height:100%;display:flex;justify-content:flex-start;flex-direction:column;overflow-y:auto;padding:1rem}.notebook-section{height:100%}.notebook-section iframe{width:100%;height:100%}.message-section{height:100%}::-webkit-scrollbar{width:5px;height:5px}::-webkit-scrollbar-track{box-shadow:inset 0 0 1px rgba(128,128,128,.281);border-radius:10px}::-webkit-scrollbar-thumb{background:rgba(128,128,128,.281);border-radius:10px}::-webkit-scrollbar-thumb:hover{background:rgba(128,128,128,.507)}
+*,
+*::after,
+*::before {
+    margin: 0;
+    padding: 0;
+}
+
+input,
+textarea {
+    font: inherit;
+}
+
+html {
+    font-size: 62.5%;
+    font-family: 'Roboto';
+    scroll-behavior: smooth;
+}
+
+body {
+    box-sizing: border-box;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
+
+.custom-container{
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.wrapper {
+    height: 100%;
+    width: 100%;
+}
+
+.video-section{
+    /* background-color: crimson; */
+    height: 100%;
+    display: flex;
+    justify-content: flex-start;
+    flex-direction: column;
+    overflow-y: auto;
+    padding: 1rem;
+}
+.notebook-section{
+    /* background-color: cornflowerblue; */
+    height: 100%;
+}
+.notebook-section iframe{
+    width: 100%;
+    height: 100%;
+}
+/* .settings-section{
+    background-color: forestgreen;
+    padding: 1rem;
+    height: 15%;
+} */
+.message-section{
+    /* background-color: goldenrod; */
+    height: 100%;
+}
+/* Scrollbar */
+/* width */
+::-webkit-scrollbar {
+    width: 5px;
+    height: 5px;
+}
+/* .no-active-call{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+}
+.no-active-call svg{
+    width: 100%;
+    height: auto;
+} */
+
+/* Track */
+::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 1px rgba(128, 128, 128, 0.281);
+    border-radius: 10px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: rgba(128, 128, 128, 0.281);
+    border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background: rgba(128, 128, 128, 0.507);
+}
